--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:exported="false"
             android:launchMode="singleTask" />
         <activity
+            android:name=".ui.activity.AnonymousReportActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".ui.activity.OnBoardingActivity"
             android:exported="true">
             <intent-filter>
